--- a/formation.html
+++ b/formation.html
@@ -1,11 +1,47 @@
 <!doctype html>
 <html lang="fr">
-<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Formation CIEL</title>
-<link rel="stylesheet" href="style.css">
+
+<!-- ScrollReveal -->
 <script src="https://unpkg.com/scrollreveal"></script>
+
+<style>
+/* ===== Global ===== */
+body {
+  margin:0; font-family:Inter,Arial,sans-serif; background:#0b0f17; color:#e7eef6;
+}
+a { text-decoration:none; }
+.btn { display:inline-block; padding:8px 16px; margin:4px; border-radius:6px; background:#00f0d1; color:#021020; font-weight:700; }
+.btn.secondary { background:#003a78; color:#fff; }
+.container { max-width:1200px; margin:0 auto; padding:0 16px; }
+.card { background:#0f1721; padding:16px; border-radius:12px; box-shadow:0 8px 20px rgba(0,0,0,0.5); margin-bottom:18px; }
+
+/* ===== Header ===== */
+.site-header { position:fixed; top:0; left:0; right:0; z-index:1200; background:linear-gradient(90deg,#003a78,#0066cc); }
+.header-inner { display:flex; align-items:center; justify-content:space-between; max-width:1200px; margin:0 auto; padding:12px 16px; }
+.brand { display:flex; align-items:center; gap:12px; }
+.logo-mark { width:48px; height:48px; background:linear-gradient(135deg,#003a78,#00f0d1); border-radius:10px; display:flex; align-items:center; justify-content:center; font-weight:700; color:#021020; }
+.brand-text h1 { margin:0; font-size:1rem; }
+.brand-text p { margin:0; font-size:0.82rem; color:#b6c7da; }
+
+nav.main-nav ul { list-style:none; display:flex; gap:12px; margin:0; padding:0; }
+nav.main-nav a { color:white; padding:8px 12px; border-radius:8px; font-weight:700; }
+.nav-toggle { display:none; font-size:1.5rem; background:none; border:none; color:white; cursor:pointer; }
+
+/* ===== Responsive ===== */
+@media(max-width:880px){
+  nav.main-nav { display:none; flex-direction:column; background:#0f1721; position:fixed; top:60px; left:0; right:0; padding:12px 0; z-index:1300; }
+  nav.main-nav.show { display:flex; }
+  nav.main-nav ul { flex-direction:column; gap:8px; padding-left:12px; }
+  .nav-toggle { display:block; }
+}
+</style>
 </head>
 <body>
+
 <header class="site-header">
   <div class="header-inner">
     <div class="brand">
@@ -15,24 +51,28 @@
         <p>Cybersécurité · Informatique · Réseaux · Électronique</p>
       </div>
     </div>
+
+    <!-- Bouton hamburger -->
     <button class="nav-toggle" aria-label="Menu">☰</button>
+
+    <!-- Menu principal identique à l'accueil -->
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="formation.html"style="background:#00f0d1">Formation</a></li>
+        <li><a href="formation.html" style="background:#00f0d1">Formation</a></li>
         <li><a href="projets.html">Projets</a></li>
         <li><a href="entreprises.html">Partenaires</a></li>
         <li><a href="contacts.html">Contacts</a></li>
         <li><a href="associations.html">Associations</a></li>
         <li><a href="galerie.html">Lycée-Fourcade</a></li>
         <li><a href="job_form.html" class="btn-nav">Forum</a></li>
-        
       </ul>
     </nav>
   </div>
 </header>
 
-<main class="container">
+<main class="container" style="padding-top:80px;">
+
   <section class="card">
     <h2>Le Bac Pro CIEL — Durée & objectifs</h2>
     <p>Le Bac Pro CIEL se prépare en <strong>3 ans</strong> (après la 3ème ou après un CAP selon parcours). L'objectif est de former des techniciens opérationnels capables de :</p>
@@ -41,31 +81,26 @@
       <li>Concevoir et prototyper des solutions électroniques (Arduino, capteurs)</li>
       <li>Assurer la maintenance et la cybersécurité des environnements connectés</li>
       <li>Développer des applications web ou locales adaptées aux besoins d’un client</li>
-
-
     </ul>
   </section>
 
-<section class="card">
-  <h2>Logiciels & matériels utilisés</h2>
-  <p>Parmi les outils et environnements enseignés :</p>
-  <ul>
-    <li>Packet Tracer (simulateur réseau)</li>
-    <li>Arduino IDE & TinkerCAD pour prototypage électronique</li>
-    <li>Linux (administration de serveurs), Wireshark (analyse réseau)</li>
-    <li>PIX (compétences numériques certifiées)</li>
-    <li>Habilec (plateforme d'entraînement aux compétences électriques)</li>
-    <li><em>… et d'autres encore</em></li>
-  </ul>
-
-  <div class="btn-container">
-    <a class="btn" href="https://www.netacad.com/courses/packet-tracer" target="_blank">Packet Tracer (NetAcad)</a>
-    <a class="btn secondary" href="https://www.arduino.cc/" target="_blank">Arduino</a>
-    <a class="btn secondary" href="https://www.pix.fr/" target="_blank">PIX</a>
-    <a class="btn secondary" href="https://habilec.fr/" target="_blank">Habilec</a>
-  </div>
-</section>
-
+  <section class="card">
+    <h2>Logiciels & matériels utilisés</h2>
+    <ul>
+      <li>Packet Tracer (simulateur réseau)</li>
+      <li>Arduino IDE & TinkerCAD</li>
+      <li>Linux, Wireshark</li>
+      <li>PIX</li>
+      <li>Habilec</li>
+      <li><em>… et d'autres encore</em></li>
+    </ul>
+    <div class="btn-container">
+      <a class="btn" href="https://www.netacad.com/courses/packet-tracer" target="_blank">Packet Tracer</a>
+      <a class="btn secondary" href="https://www.arduino.cc/" target="_blank">Arduino</a>
+      <a class="btn secondary" href="https://www.pix.fr/" target="_blank">PIX</a>
+      <a class="btn secondary" href="https://habilec.fr/" target="_blank">Habilec</a>
+    </div>
+  </section>
 
   <section class="card">
     <h2>Projets & ateliers (exemples développés)</h2>
@@ -83,170 +118,50 @@
   <section class="card">
     <h2>Emplois possibles après un Bac Pro CIEL</h2>
     <div class="job-cards">
-  <div class="card">
-    <strong>Technicien réseaux</strong>
-    <p class="muted">Installation et maintenance des réseaux</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien en électronique</strong>
-    <p class="muted">Conception et réparation de cartes électroniques</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien cybersécurité</strong>
-    <p class="muted">Supervision et sécurité des systèmes</p>
-  </div>
-
-  <div class="card">
-    <strong>Support informatique</strong>
-    <p class="muted">Assistance, déploiement et support utilisateur</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien IoT / embarqué</strong>
-    <p class="muted">Objets connectés et intégration</p>
-  </div>
-
-  <div class="card">
-    <strong>Développeur web / mobile</strong>
-    <p class="muted">Création d'applications et sites web</p>
-  </div>
-
-  <div class="card">
-    <strong>Administrateur systèmes</strong>
-    <p class="muted">Gestion de serveurs et services cloud</p>
-  </div>
-
-  <div class="card">
-    <strong>Analyste sécurité</strong>
-    <p class="muted">Audit, détection et réponse aux incidents</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien domotique</strong>
-    <p class="muted">Installation et configuration de maisons intelligentes</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien robotique</strong>
-    <p class="muted">Maintenance et programmation de robots industriels</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien impression 3D</strong>
-    <p class="muted">Fabrication et assemblage de prototypes</p>
-  </div>
-
-  <div class="card">
-    <strong>Chef de projet</strong>
-    <p class="muted">Organisation, planification et suivi de projets techniques</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien smart city</strong>
-    <p class="muted">Gestion des infrastructures urbaines connectées</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien cloud / virtualisation</strong>
-    <p class="muted">Déploiement et gestion des environnements virtuels</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien audiovisuel</strong>
-    <p class="muted">Installation et maintenance de systèmes audio/vidéo</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien télécom</strong>
-    <p class="muted">Installation et maintenance des réseaux télécom</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien énergétique</strong>
-    <p class="muted">Maintenance et optimisation des systèmes énergétiques</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien automatisme industriel</strong>
-    <p class="muted">Programmation et maintenance d'automatismes</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien maintenance informatique</strong>
-    <p class="muted">Réparation et maintenance des ordinateurs et serveurs</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien instrumentation</strong>
-    <p class="muted">Installation et étalonnage des instruments de mesure</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien électronique embarquée</strong>
-    <p class="muted">Conception et maintenance des systèmes embarqués</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien en sécurité industrielle</strong>
-    <p class="muted">Prévention et contrôle des risques techniques</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien robotique mobile</strong>
-    <p class="muted">Développement et maintenance de robots mobiles</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien systèmes embarqués</strong>
-    <p class="muted">Gestion et maintenance des systèmes embarqués</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien cloud / DevOps</strong>
-    <p class="muted">Déploiement et automatisation des services cloud</p>
-  </div>
-
-  <div class="card">
-    <strong>Technicien IA / Data</strong>
-    <p class="muted">Collecte et traitement des données, intelligence artificielle</p>
-  </div>
-
-</div>
-
-
-  </div>
-</div>
-
+      <!-- Tous les job-cards inchangés -->
+      <div class="card"><strong>Technicien réseaux</strong><p class="muted">Installation et maintenance des réseaux</p></div>
+      <div class="card"><strong>Technicien en électronique</strong><p class="muted">Conception et réparation de cartes électroniques</p></div>
+      <div class="card"><strong>Technicien cybersécurité</strong><p class="muted">Supervision et sécurité des systèmes</p></div>
+      <div class="card"><strong>Support informatique</strong><p class="muted">Assistance, déploiement et support utilisateur</p></div>
+      <div class="card"><strong>Technicien IoT / embarqué</strong><p class="muted">Objets connectés et intégration</p></div>
+      <div class="card"><strong>Développeur web / mobile</strong><p class="muted">Création d'applications et sites web</p></div>
+      <div class="card"><strong>Administrateur systèmes</strong><p class="muted">Gestion de serveurs et services cloud</p></div>
+      <div class="card"><strong>Analyste sécurité</strong><p class="muted">Audit, détection et réponse aux incidents</p></div>
+      <div class="card"><strong>Technicien domotique</strong><p class="muted">Installation et configuration de maisons intelligentes</p></div>
+      <div class="card"><strong>Technicien robotique</strong><p class="muted">Maintenance et programmation de robots industriels</p></div>
+      <div class="card"><strong>Technicien impression 3D</strong><p class="muted">Fabrication et assemblage de prototypes</p></div>
+      <div class="card"><strong>Chef de projet</strong><p class="muted">Organisation, planification et suivi de projets techniques</p></div>
+      <div class="card"><strong>Technicien smart city</strong><p class="muted">Gestion des infrastructures urbaines connectées</p></div>
+      <div class="card"><strong>Technicien cloud / virtualisation</strong><p class="muted">Déploiement et gestion des environnements virtuels</p></div>
+      <div class="card"><strong>Technicien audiovisuel</strong><p class="muted">Installation et maintenance de systèmes audio/vidéo</p></div>
+      <div class="card"><strong>Technicien télécom</strong><p class="muted">Installation et maintenance des réseaux télécom</p></div>
+      <div class="card"><strong>Technicien énergétique</strong><p class="muted">Maintenance et optimisation des systèmes énergétiques</p></div>
+      <div class="card"><strong>Technicien automatisme industriel</strong><p class="muted">Programmation et maintenance d'automatismes</p></div>
+      <div class="card"><strong>Technicien maintenance informatique</strong><p class="muted">Réparation et maintenance des ordinateurs et serveurs</p></div>
+      <div class="card"><strong>Technicien instrumentation</strong><p class="muted">Installation et étalonnage des instruments de mesure</p></div>
+      <div class="card"><strong>Technicien électronique embarquée</strong><p class="muted">Conception et maintenance des systèmes embarqués</p></div>
+      <div class="card"><strong>Technicien en sécurité industrielle</strong><p class="muted">Prévention et contrôle des risques techniques</p></div>
+      <div class="card"><strong>Technicien robotique mobile</strong><p class="muted">Développement et maintenance de robots mobiles</p></div>
+      <div class="card"><strong>Technicien systèmes embarqués</strong><p class="muted">Gestion et maintenance des systèmes embarqués</p></div>
+      <div class="card"><strong>Technicien cloud / DevOps</strong><p class="muted">Déploiement et automatisation des services cloud</p></div>
+      <div class="card"><strong>Technicien IA / Data</strong><p class="muted">Collecte et traitement des données, intelligence artificielle</p></div>
     </div>
     <p style="margin-top:12px;color:var(--muted)">Poursuites : BTS CIEL, BTS SN, licences pro spécialisées, écoles d'ingénieur (selon parcours).</p>
   </section>
+
 </main>
+
 <footer class="site-footer"><div class="footer-inner">&copy; 2025 Section Formation</div></footer>
+
 <script src="js/script.js"></script>
-</body></html>
 
+<!-- Script hamburger -->
+<script>
+  const navToggle = document.querySelector('.nav-toggle');
+  const mainNav = document.querySelector('nav.main-nav');
+  navToggle.addEventListener('click', () => { mainNav.classList.toggle('show'); });
+</script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
+</html>
 
